HelloUltraviolet/Fixtures/RejectedSource/Expressions/RaceHandlerMix/Expected.uv
//! Expected diagnostic metadata for the RaceHandlerMix rejected-source specimen.

expectedDiagnostic("E-CON-0263", "rule.21.Race-Handler-Mix-Err")
